fixed iphone overflow:hidden

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,11 @@
     margin: 0;
 }
 
+html{
+    height: 100vh;
+    overflow: hidden;
+}
+
 body{
     height: 100vh;
     overflow: hidden;
